# cafo-iowa-public

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
cafo_iowa/: README.md  config_old.yaml
cafo_iowa/data/: README.md  dataloop.py  img_ingest.py  img_process.py  ingest.py  process.py
cafo_iowa/data/cfg/: config.yaml
cafo_iowa/data/helpers/: gcs.py  geo.py  imgs.py  matching.py
cafo_iowa/db/: funs.py  models.py  session.py
cafo_iowa/db/migrations/: env.py
cafo_iowa/estimate/: animal_estimation.py  constants.py  create_facilities_tables.py  estimate.py  get_facilities_data.py  pollutant_estimation.py
cafo_iowa/utils/: io.py  strata.py  utils.py  visualize.py
notebooks/: 00_desc.ipynb  01_naip_tiling.ipynb  02_select_label_batches.ipynb  03_mask-urban-areas.ipynb  04_comparing-new-and-old-permits.ipynb  05_inspecting_tiles_with_labels.ipynb  07_segment-anything_eda.ipynb  08_download_labels.ipynb  09_inspect_labels.ipynb  10_inspect_annotations-parcels-and-permits.ipynb  11_get_parcels_for_barns.ipynb  12_inspect-labeled-parcels.ipynb  13_estimate_animals.ipynb  14_get_facilities.ipynb  15_inspect_facilities.ipynb  17_permits_with_no_parcels.ipynb  18_save_data_from_db_for_arcgis.ipynb  19_relabeling_tiles.ipynb  20_select_tiles_for_labeling.ipynb  21_annotations_outside_of_facilities.ipynb  22_create_satelite_figs.ipynb  Paper_Figures_Analysis.ipynb  README.md  sensitivity_test.ipynb
output/matching/: exact_matching_records.csv  tfidf_matching_records.csv
(+170 files in other folders)
