[project]
name = "cafo_iowa"
version = "0.1.0"
authors = [
    { name = "Arun Frey", email = "arunfrey@law.stanford.edu"},
]
description = "A project for identifying Concentrated Animal Feeding Operations (CAFOs) in Iowa."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"

[project.urls]
homepage = "https://github.com/reglab/cafo_iowa"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cafo_iowa"]


[tool.isort]
profile = "black"
src_paths = ["cafo_iowa"]
skip_gitignore = true
